fix wrapping and move all sanitization to sanitizeText

--- a/tgui/packages/tgui/styles/interfaces/Paper.scss
+++ b/tgui/packages/tgui/styles/interfaces/Paper.scss
@@ -5,8 +5,14 @@
   * @license ISC
   */
 
-.Paper__Stamp {
-  position: absolute;
-  pointer-events: none;
-  user-select: none;
+.Paper {
+  &__Stamp {
+    position: absolute;
+    pointer-events: none;
+    user-select: none;
+  }
+  &__Page {
+    word-break: break-word;
+    word-wrap: break-word;
+  }
 }
